--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "repository server admin ecommerce",
   "main": "app.js",
   "scripts": {
-    "dev":"(SET NODE_ENV=development) & nodemon bin/http.js",
+    "dev": "(SET NODE_ENV=development) & nodemon bin/http.js",
     "test": "(SET NODE_ENV=test) & npx jest --verbose --coverage --detectOpenHandles --runInBand --forceExit"
   },
   "repository": {
@@ -25,6 +25,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.0",
