--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "repository server admin ecommerce",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node bin/http.js",
-    "dev": "NODE_ENV=development nodemon bin/http.js",
-    "test": "NODE_ENV=test sequelize db:seed:all && npx jest --verbose --runInBand --detectOpenHandles --forceExit"
+    "start": "node bin/http.js",
+    "dev": "NODE_ENV=development nodemon bin/http.js"
   },
   "repository": {
     "type": "git",
