--- a/config/config.json
+++ b/config/config.json
@@ -6,8 +6,14 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
-  "production": {
-    "use_env_variable": "DATABASE_URL",
+  "test": {
+    "username": "postgres",
+    "password": "postgres",
+    "database": "ecommere-server",
+    "host": "127.0.0.1",
     "dialect": "postgres"
+  },
+  "production": {
+    "use_env_variable": "DATABASE_URL"
   }
 }
