--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "(SET NODE_ENV=development) & nodemon bin/http.js",
-    "test": "(SET NODE_ENV=test) & npx jest --verbose --coverage --detectOpenHandles --runInBand --forceExit"
+    "test": "(SET NODE_ENV=test) & npx jest --verbose --coverage --detectOpenHandles --runInBand --forceExit",
+    "start": "node bin/http.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.0",
-    "sequelize": "^6.3.4"
+    "sequelize": "^6.3.4",
+    "socket.io": "^2.3.0"
   }
 }
