--- a/config/config.json
+++ b/config/config.json
@@ -7,7 +7,11 @@
     "dialect": "postgres"
   },
   "test": {
-    "use_env_variable": "DATABASE_URL"
+    "username": "postgres",
+    "password": "postgres",
+    "database": "ecommere-server",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
   },
   "production": {
     "use_env_variable": "DATABASE_URL"
